[package]
authors = ["Moody <mooodyhunter@outlook.com"]
edition = "2021"
name = "kust"
version = "0.1.0"

[workspace]
members = ["image_gen"]

# disable stack unwinding on panic
[profile.dev]
panic = "abort"
[profile.release]
panic = "abort"

[dependencies]
bootloader = "0.10.12"
conquer-once = {version = "0.3.2", default-features = false}
log = "0.4.14"
printk = "0.2.4"
